[workspace]
members = [
  "dining_philosophers",
  "json",
  "slices",
  "adder",
  "drop-trait",
  "largest",
  "socket",
  "adder_bin",
  "embed",
  "lifetime",
  "panic",
  "stdin",
  "array",
  "enumerations",
  "loops",
  "post",
  "string",
  "async",
  "first_world",
  "macros",
  "private",
  "thread",
  "box",
  "functions",
  "map",
  "rc",
  "timeout",
  "branches",
  "generic_data_types",
  "minigrep",
  "rectangles",
  "trait_test",
  "channel",
  "guessing_game",
  "mock",
  "reference-cycles",
  "variables",
  "closures",
  "hello",
  "mutex",
  "references",
  "vector",
  "comment",
  "hello_cargo",
  "mybox",
  "result",
  "wasm",
  "communicator",
  "node",
  "rust2018",
  "counter",
  "interval",
  "rust_gui",
  "default_value",
  "iterator",
  "ownership",
  "rusttest"
]
